Fix inspection issues